# computacao-grafica-eh-bacana

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  leia-me.txt  main.cpp
cube/a/: right.tga
cube/fantasy/: back.tga  bottom.tga  front.tga  left.tga  top.tga
include/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
include/glfw/docs/: Doxyfile  Makefile  cmake_install.cmake
include/glfw/examples/: Makefile  cmake_install.cmake
include/glfw/src/: Makefile  cmake_install.cmake  glfw3ConfigVersion.cmake
include/glfw/tests/: Makefile  cmake_install.cmake
render/: BasicObjLoader.cpp  BasicObjLoader.h  Camera.cpp  Camera.h  Context.cpp  Context.h  Interface.cpp  Interface.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OBJ.cpp.bkp  Shader.cpp  Shader.h  Structs.h  stb_image.h
shaders/: cube_fragment.glsl  cube_vertex.glsl  fragment.glsl  fragment.glsl.bak  light_fragment.glsl  vertex.glsl
texturas/: cobre.tif
